<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_5sdp"
    android:id="@+id/cdMain"
    android:background="@drawable/editext_bg"
    android:layout_height="@dimen/_60sdp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/folder"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/folder" />

    <TextView
        android:id="@+id/tvFolderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/videos"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvNoOfItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_1"
        android:includeFontPadding="false"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFolderName"
        app:layout_constraintStart_toEndOf="@+id/tvFolderName"
        app:layout_constraintTop_toTopOf="@+id/tvFolderName" />

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />
</androidx.constraintlayout.widget.ConstraintLayout>